--- a/WebContent/css/common.css
+++ b/WebContent/css/common.css
@@ -1,29 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Crimson+Pro:wght@400;700&family=DM+Serif+Display&family=Noto+Sans+KR:wght@400;700&display=swap');
 
-@font-face {
-  font-family: "Safira";
-  src: url("../fonts/SafiraMarch.otf") format('opentype');
-}
-
-@font-face {
-    font-family: 'Nanum';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_11-01@1.0/NanumSquareNeo-Variable.woff2') format('woff2');
-    font-weight: normal;
-    font-style: normal;
-}
-
-body {
+body {font-family: 'DM Serif Display', 'Crimson Pro', 'Noto Sans KR', serif, sans-serif;}
+body.main{
 	background: url('../backgroundImage/blueSky.jpg');
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	background-size:cover;
 }
-
-*{
-    font-style: 'Nanum'!important;
+ul, ol, li {
     list-style: none;
 }
-
-
 
 /* 메인 스토리 부분 */
 .story{
