--- a/WebContent/css/common.css
+++ b/WebContent/css/common.css
@@ -478,6 +478,7 @@ transition: all 0.4s ease-in-out;
 .boardbtn:hover {background:#9CA09F;color:#fff}
 @media (min-width: 992px) {
 	.boardbtn {width:198px;height:60px;border-radius:20px;font-size:20px;}
+	.boardbtn.notice {margin-top:60px}
 }
 /* board list */
 .table-responsive {border:0}
