--- a/WebContent/css/common.css
+++ b/WebContent/css/common.css
@@ -11,18 +11,34 @@ ul, ol, li {
     list-style: none;
 }
 
+
+a{
+	cursor: pointer;
+}
+
+/* 네비바 */
+.n1{
+	 font-family: "Crimson Pro";
+	 font-size: 35px;
+}
+nav{
+	 font-family: "Crimson Pro";
+}
+
 /* 메인 스토리 부분 */
 .story{
 	background-color: rgb(225, 225, 227); 
 	height:330px; 
 	margin-bottom: 220px;
+	margin-top: 100px;
 }
 .story > h4{
 	margin : 0px;
+	font-size: 30px;
 	padding-top: 50px;
 	padding-bottom: 50px;
 	text-align: center;
-	font-family: "Safira";
+	font-family: "Crimson Pro";
 }
 .storyproduct{
 	display: flex;
@@ -36,16 +52,30 @@ ul, ol, li {
 	border-radius: 30px;
 	opacity:0;
 }
+.storytext{
+	font-family: 'Crimson Pro', 'Noto Sans KR';
+	font-size: 18px;
+	line-height: 2;
+	text-align: center;
+}
+.storytext1{
+	margin-top: 100px;
+}
+.story_sub{
+	font-size: 18px;
+}
 
 /* color 부분 */
 .maincolor{
-	margin: 0 auto;
+	margin-top: 200px;
+	
 }
 .maincolor > h4 {
-	padding-top: 100px;
-	padding-bottom: 50px;
+	font-size: 40px;
+	padding-top: 60px;
+	padding-bottom: 60px;
 	text-align: center;
-	font-family: "Safira";
+	font-family: "Crimson Pro";
 	font-weight: bold;
 }
 .colorproduct{
@@ -83,15 +113,19 @@ position: absolute;
 .probtn{
 	background-color: #292F36;
 	color : white;
-	width: auto;
 	font-size: 20px;
 	text-align: center;
 	padding : 26px 54px 26px 54px;
 	margin-top: 50px;
+	margin-left : 45%;
+	margin-right : 40%;
 	border-radius: 12px;
 	border: none;
-	
 }
+.probtn:hover {
+      background-color:#53606E;
+      transition: 0.7s;
+  }
 
 /* 분할 텍스트 영역 */
 .sixwrap{
@@ -114,9 +148,16 @@ position: absolute;
 	font-size: 18px;
 	text-align: center;
 	padding-top: 50px;
+	border-radius: 30px;
+}
+.sixcontext > div:hover{
+	background-color: #E3D0CC;
+	transition: 0.7s;
 }
 .sixcontext > div > strong{
-	font-family: "Safira";
+	font-family: "Crimson Pro";
+	font-size: 30px;
+	border-radius: 30px;
 }
 .b1{
 	background-color: rgb(225, 225, 227);
@@ -132,13 +173,13 @@ position: absolute;
 	margin: 0 auto;
 	border-radius: 70px; 
 }
-.movebtn > div > p {
-	font-size: 20px;
-	font-family: "Safira";
-}
 .movebtn > div{
 	padding-top: 50px;
 	font-size: 15px;
+}
+.movebtn > div > p {
+	font-size: 30px;
+	font-family: "Crimson Pro";
 }
 .move{
 	background-color: #CDA274;
@@ -148,6 +189,10 @@ position: absolute;
 	border-radius: 15px;
 	border: none;
 }
+.move:hover {
+      background-color:#CC947C;
+      transition: 0.7s;
+  }
 
 /* 지도 영역 */
 .mainmap{
@@ -155,8 +200,9 @@ position: absolute;
 	margin-bottom: 180px;
 }
 .mapp{
+	font-family: "Crimson Pro";
 	text-align: center;
-	font-size: 20px;
+	font-size: 30px;
 	margin-top: 220px;
 }
 #map{
@@ -179,13 +225,7 @@ h3{
   padding-top: 10px;
 }
 
-a{
-	cursor: pointer;
-}
-.n1{
-	 font-family: "Safira";
-	 font-size: 15px;
-}
+
 .container{
 	background-color: none !important; 
     margin-bottom: 0%;
@@ -194,7 +234,10 @@ a{
 	color: black;
 }
 
-
+/* 푸터 css */
+footer{
+	font-family: "Crimson Pro";
+}
 
 
 
