kej, 게시판 관련 퍼블리싱 완료

--- a/WebContent/css/common.css
+++ b/WebContent/css/common.css
@@ -517,11 +517,16 @@ transition: all 0.4s ease-in-out;
 
 /* 게시판 공통 */
 /* board buttons */
-.boardbtn {width:112px;height:42px;background:#D9D9D9;border-radius:14px;font-size:14px;margin-top:20px}
+.boardbtn {width:112px;height:42px;background:#D9D9D9;border-radius:21px;font-size:14px;margin-top:20px}
 .boardbtn:hover {background:#9CA09F;color:#fff}
+.boardbtn:not(:first-child) {margin-left:34px}
+.btnarea {margin:80px 0;text-align:right;}
+.btnarea .boardbtn {margin-top:0}
 @media (min-width: 992px) {
-	.boardbtn {width:198px;height:60px;border-radius:20px;font-size:20px;}
+	.boardbtn {width:198px;height:60px;border-radius:30px;font-size:20px;}
 	.boardbtn.notice {margin-top:60px}
+	.boardbtn:not(:first-child) {margin-left:48px}
+	.btnarea {margin:120px 0;}
 }
 /* board list */
 .table-responsive {border:0}
@@ -529,4 +534,22 @@ transition: all 0.4s ease-in-out;
 .table.boardlist>tbody>tr>td a {color:#4D5053;}
 @media (min-width: 992px) {
 	.table.boardlist>tbody>tr>td  {min-height:130px;padding:42px 10px;font-size:30px;}
+}
+/* board view */
+.boardview .title {padding:30px 7px;font-size:21px;border-bottom:1px solid #000}
+.boardview .user {color:#575656;text-align:right}
+.boardview .content {padding:18px;color:#000;font-size:16px;}
+@media (min-width: 992px) {
+	.boardview .title {padding:42px 10px;font-size:30px;}
+	.boardview .content {padding:25px;font-size:24px;}
+}
+/* board boardwrite */
+.boardwrite .form-group {margin:0}
+.boardwrite .control-label {padding-top:28px;padding-bottom:10px;font-size:16px;text-align:left;}
+.boardwrite .form-control {height:63px;font-size:16px;border-radius:0;background:#D9D9D9;padding:14px}
+.boardwrite textarea.form-control {height:190px;resize:none}
+@media (min-width: 992px) {
+	.boardwrite .control-label {padding-top:40px;padding-bottom:15px;font-size:24px;}
+	.boardwrite .form-control {height:90px;font-size:24px;;padding:20px}
+	.boardwrite textarea.form-control {height:272px;}
 }
