kmj 메인, css 파일 수정

--- a/WebContent/css/common.css
+++ b/WebContent/css/common.css
@@ -68,7 +68,8 @@ nav{
 /* color 부분 */
 .maincolor{
 	margin-top: 200px;
-	
+	width: auto;
+	background-color: rgb(225, 225, 227);
 }
 .maincolor > h4 {
 	font-size: 40px;
@@ -79,11 +80,10 @@ nav{
 	font-weight: bold;
 }
 .colorproduct{
-	display: flex;
-	display: -webkit-flex;
-	justify-content: space-around;
-	height: 420px;
+	display: grid;
+	grid-template-columns: repeat(auto-fill, minmax(412px, 0.5fr));
 	box-sizing: border-box;
+	justify-content: space-around;
 }
 .colorproduct > div > li > img{
 	border-radius: 10px 10px 0 120px;
@@ -114,9 +114,9 @@ position: absolute;
 	font-size: 20px;
 	text-align: center;
 	padding : 26px 54px 26px 54px;
-	margin-top: 50px;
-	margin-left : 45%;
-	margin-right : 40%;
+	margin-top: 30px;
+	margin-left : 40%;
+	margin-bottom : 30px;
 	border-radius: 12px;
 	border: none;
 }
@@ -204,10 +204,10 @@ position: absolute;
 	margin-top: 220px;
 }
 #map{
-     width: 500px;
+     width: 700px;
      height: 500px;
-     margin-left: 80px;
-     margin-right: 80px;
+     
+     margin-right: 40px;
      margin-top: 160px;
      margin-bottom: 30px;
 }
