kej, 상품평관련 css 수정

--- a/WebContent/css/common.css
+++ b/WebContent/css/common.css
@@ -658,8 +658,6 @@ background-color: #fff;
 }
 .review-box h3 {margin-top:0}
 
-#post-review-box {
-	margin-top: 15px;
-	
-}
+#post-review-box {margin-top: 15px;}
+#post-review-box textara {margin-bottom: 15px;}
 #close-review-box {margin-right:10px;}
