--- a/WebContent/css/common.css
+++ b/WebContent/css/common.css
@@ -26,7 +26,7 @@ nav{font-family: "Crimson Pro";}
 background-color: rgb(225, 225, 227); height:330px; margin-bottom: 220px; margin-top: 100px;}
 .story > h4{ margin : 0px; font-size: 30px; padding-top: 50px; padding-bottom: 50px; text-align: center; font-family: "Crimson Pro";}
 .storyproduct{ display: flex; display: -webkit-flex; justify-content: space-around; height: 300px; margin-left: 15%; margin-right: 15%; }
-.storyproduct > div > li > img{ border-radius: 30px; opacity:0;}
+.storyproduct > div > li > img{ border-radius: 30px; opacity:0; width: 100%; height: 120%;}
 .storytext{ font-family: 'Crimson Pro', 'Noto Sans KR'; font-size: 18px; line-height: 2; text-align: center; }
 .storytext1{ margin-top: 100px;}
 .story_sub{ font-size: 18px; }
@@ -42,7 +42,7 @@ margin-top: 200px; width: auto; background-color: rgb(225, 225, 227); }
 .mc-c{ position: absolute; opacity: 0; transition: opacity 0.5s linear; top: 0px; left: 0px;}
 .mc-a:hover .mc-c{ opacity: 1; z-index: 1;}
 .probtn{background-color: #292F36; color : white; font-size: 20px; text-align: center; padding : 26px 54px 26px 54px; 
-margin-top: 30px; margin-left : 36%; margin-bottom : 30px; border-radius: 12px; border: none;}
+margin-top: 30px; margin-bottom : 30px; border-radius: 12px; border: none;}
 .probtn:hover { background-color:#53606E; transition: 0.7s;}
 
 /* 분할 텍스트 영역 */
