--- a/WebContent/css/common.css
+++ b/WebContent/css/common.css
@@ -1,19 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Crimson+Pro:wght@400;700&family=DM+Serif+Display&family=Noto+Sans+KR:wght@400;700&display=swap');
 
-body {font-family: 'DM Serif Display', 'Crimson Pro', 'Noto Sans KR', serif, sans-serif;}
-body.main{
-	background: url('../backgroundImage/blueSky.jpg');
-	background-repeat: no-repeat;
-	background-attachment: fixed;
-	background-size:cover;
-}
-ul, ol, li {
-    list-style: none;
-}
+body {font-family: 'DM Serif Display', 'Crimson Pro', 'Noto Sans KR', serif, sans-serif;word-break:keep-all}
+ul, ol, li {list-style: none;}
+a{cursor: pointer;}
 
-a{
-	cursor: pointer;
-}
 /* top */
 /* 네비바 */
 .n1{font-family: "Crimson Pro"; font-size: 35px;}
@@ -37,7 +27,7 @@ nav{font-family: "Crimson Pro";}
 .mainveg .vegas-timer .vegas-timer-progress {background:#CDA274}
 
 /* 메인 스토리 부분 */
-.storytext {padding-top:150px;padding-bottom:150px;font-size: 18px; line-height: 2; text-align: center;word-break:keep-all;overflow:hidden}
+.storytext {padding-top:150px;padding-bottom:150px;font-size: 18px; line-height: 2; text-align: center;overflow:hidden}
 .storytext p:nth-child(2) {margin-top:50px;}
 /* 스크롤 페이드인 */
 @keyframes fadeInUp {from {opacity: 0; transform: translateY(100%);}
@@ -54,51 +44,47 @@ nav{font-family: "Crimson Pro";}
 
 /* color 부분 */
 .maincolor{width: auto; background-color: rgb(225, 225, 227); }
-.maincolor > h4 {font-size: 40px; padding-top: 60px; padding-bottom: 60px; text-align: center; font-family: "Crimson Pro"; font-weight: bold; }
+.maincolor > h4 {font-size: 40px; padding-top: 60px; padding-bottom: 60px; text-align: center; font-weight: bold; }
 .colorproduct{ display: grid; grid-template-columns: repeat(auto-fill, minmax(412px, 0.5fr)); box-sizing: border-box; justify-content: space-around;}
 .colorproduct > div > li > img{ border-radius: 10px 10px 0 120px; padding-bottom: 60px;}
-
 .mc-a{ position: relative; margin: 0 auto; width: 270px;}
 .mc-c{ position: absolute; opacity: 0; transition: opacity 0.5s linear; top: 0px; left: 0px;}
 .mc-a:hover .mc-c{ opacity: 1; z-index: 1;}
-.probtn{background-color: #292F36; color : white; font-size: 20px; text-align: center; padding : 26px 54px 26px 54px; 
+.probtn{background-color: #292F36; color : #fff; font-size: 20px; text-align: center; padding : 26px 54px 26px 54px; 
 margin-top: 30px; margin-bottom : 30px; border-radius: 12px; border: none;}
 .probtn:hover { background-color:#53606E; transition: 0.7s;}
 
 /* 분할 텍스트 영역 */
 .sixwrap{ padding-top: 200px; padding-bottom: 200px;}
-.sixcontext{ display: flex; display: -webkit-flex; display: -ms-flexbox; height:300px; padding-top: 0px;}
-.sixcontext > div{ flex: 0 1 80%; -webkit-flex: 0 1 80%; -ms-flexbox: 0 1 80%; font-size: 18px; text-align: center; padding-top: 80px; border-radius: 30px;}
-.sixb:hover{ background-color: #E3D0CC; transition: 0.7s;}
-.sixcontext > div > strong{ font-family: "Crimson Pro"; font-size: 30px; border-radius: 30px;}
-.b1{ background-color: rgb(225, 225, 227); border-radius: 30px;}
-.movebtn{ height: 106%;	width: 70%;	background-color: #292F36;	color: white; text-align: center; margin: 0 auto; border-radius: 70px;}
-.movebtn > div{ padding-top: 50px; font-size: 15px;}
-.movebtn > div > p { font-size: 30px; font-family: "Crimson Pro";}
-.move{ background-color: #CDA274; text-align: center; padding : 15px 40px 15px 40px; margin-top: 50px; border-radius: 15px; border: none;}
-.move:hover { background-color:#CC947C; transition: 0.7s; }
+.sixcontext{box-sizing:border-box}
+.sixcontext .sixb {background-color:#e1e1e3;font-size: 18px; text-align: center;border-radius: 30px;margin-top:10px}
+.sixcontext .sixb p {font-size: 30px;font-weight:bold; padding-top: 80px;padding-bottom:20px}
+.sixcontext .sixb span {display:block;font-size: 22px;padding-bottom:80px}
+.sixcontext .sixb.b1{ background-color:#E3D0CC; border-radius: 30px;}
+@media (min-width: 768px) {
+	.sixcontext{height:390px;}
+	.sixcontext .sixb {background-color:#fff;margin-top:0}
+	.sixcontext .sixb:hover{ background-color: #E3D0CC; transition: 0.7s;}
+	.sixcontext .sixb.b1{ background-color: #e1e1e3}
+}
+/* join us */
+.movebtn{background-color: #292F36; color: #fff; text-align: center; border-radius: 70px;padding:70px 0}
+.movebtn .title { font-size: 30px;padding:0 20px}
+.movebtn p {font-size: 15px;padding:10px 20px;}
+.movebtn .move{display:inline-block;width:240px;height:75px;background-color: #CDA274;font-size:18px;border-radius: 15px; border: none;margin-top:20px}
+.movebtn .move:hover { background-color:#CC947C; transition: 0.7s; }
+
 
 /* 지도 영역 */
-.mainmap{ margin-bottom: 80px;	display: flex;}
-.mapp{ font-family: "Crimson Pro"; text-align: center; font-size: 30px;	margin-top: 220px;}
-#map{ width: 60%; height: 500px; margin-right: 40px; margin-top: 120px; margin-bottom: 30px;}
-.transport{ margin-top: 120px; margin-top: 178px;}
-.transport > strong > p{ font-size: 22px; font-weight: 600;}
-.tptext{ font-size: 15px;}
-h3{ color: #000; padding-top: 10px;}
-
-	
-@media screen and (min-width: 760px) {
-.mainmap{display: flex;}
-.mapp{font-size: 25px; text-align: left;}
+.maptitle{text-align: center; font-size: 30px;	margin-top: 220px;}
+.mainmap {margin-top: 60px; margin-bottom: 80px;}
+.mainmap #map {height: 450px; margin-bottom: 30px;}
+.mainmap .transport {margin-top: 20px;}
+.mainmap .transport h3 { font-size: 22px; font-weight: bold;padding-bottom:20px}
+.mainmap .transport .tptext {font-size: 15px;padding-top:15px}
+@media screen and (min-width: 992px) {
+	.transport {padding-left:50px; }
 }
-
-/* .container{
-	background-color: none !important; 
-    margin-bottom: 0%;
-} */
-
-
 
 .btn-glyphicon { padding:8px; background:#ffffff; margin-right:4px; }
 .icon-btn { padding: 1px 15px 3px 2px; border-radius:50px;}
