--- a/WebContent/css/common.css
+++ b/WebContent/css/common.css
@@ -6,9 +6,17 @@ a{cursor: pointer;}
 
 /* top */
 /* 네비바 */
-.n1{font-family: "Crimson Pro"; font-size: 35px;}
-nav{font-family: "Crimson Pro";}
-.dropdown-toggle, .ddt{color: black;}
+.navbar-header .navbar-brand {font-size: 30px;font-weight:bold;color:#555; margin-bottom: 8px; margin-top: 8px;}
+.navbar-header .navbar-toggle {padding:10px;margin-top:16px;}
+.nav>li>a {font-size:16px;font-weight:bold;}
+.nav.member>li>a {color:#000}
+.navbar-right {margin-right:0;}
+.navbar-collapse {padding-right:0;}
+.dropdown-menu {font-size:15px;padding:0}
+@media (min-width: 768px) {
+	#navbar {padding-top:10px}
+	.navbar-right {margin-right:5px;}
+}
 
 /* 쿠키 팝업 */
 .popup_image {position: absolute; z-index:100;left: 30px;top: 170px; background-color: #F7F9F6; width: 310px;}
