--- a/WebContent/css/common.css
+++ b/WebContent/css/common.css
@@ -547,13 +547,14 @@ transition: all 0.4s ease-in-out;
 
 /* by, 김은주, 정은진 - 로그인, 비밀번호찾기, 회원가입, 정보수정 */
 .backgroundImg {
-	background-image: url('${context}/backgroundImage/loginImg.png');
+	background-image: url('/backgroundImage/loginImg.png');
 	background-size: cover;
 	margin-bottom:-100px;
 	padding:100px 15px;
 }
 .loginbox {max-width: 566px;background:#fff;padding: 0px;margin:0 auto;border-radius: 30px; }
 .logintab {overflow:hidden;border-radius: 30px 30px 0 0; text-align:center;}
+.logintab .title {height:44px;font-size:20px;text-align:left;padding-top:21px;padding-left:48px}
 .logintab .tabbtn {background:#9E9C9C;}
 .logintab .tabbtn a {display:block;width:100%;height:44px;font-size:20px;padding-top:7px}
 .logintab .tabbtn a:hover {color:#fff;transition:0.3s}
@@ -562,7 +563,7 @@ transition: all 0.4s ease-in-out;
 .loginbox form .form-control {height: 46px;border-radius: 15px; margin-bottom:11px;}
 .loginbox form ::-webkit-input-placeholder {font-family: Crimson Pro;font-size:16px;}
 .loginbox form #id::-webkit-input-placeholder{
-  background-image: url('${context}/userImg/user.svg') ;
+  background-image: url('/userImg/user.svg') ;
   background-size: contain;
   background-position:  1px center;
   background-repeat: no-repeat;
@@ -571,7 +572,18 @@ transition: all 0.4s ease-in-out;
   filter: invert(98%) sepia(0%) saturate(15%) hue-rotate(142deg) brightness(87%) contrast(85%);
 }
 .loginbox form #pw::-webkit-input-placeholder{
-  background-image: url('${context}/userImg/key.svg') ;
+  background-image: url('/userImg/key.svg') ;
+  background-size: contain;
+  background-position:  1px center;
+  background-repeat: no-repeat;
+  padding: 0 15px 0 0;
+  text-indent: 0;
+  text-align:left;
+  padding-left:40px;
+  filter: invert(98%) sepia(0%) saturate(15%) hue-rotate(142deg) brightness(87%) contrast(85%);
+}
+.loginbox form #email::-webkit-input-placeholder{
+  background-image: url('/userImg/mail.svg') ;
   background-size: contain;
   background-position:  1px center;
   background-repeat: no-repeat;
@@ -591,6 +603,7 @@ transition: all 0.4s ease-in-out;
 	background-color: #9CA09F;
 }
 @media (min-width: 992px) {
+	.logintab .title {height:62px;font-size:28px;padding-top:30px;padding-left:70px}
 	.logintab .tabbtn a {height:62px;font-size:28px;padding-top:10px}
 	.loginbox form {padding:50px 50px 30px;font-size:20px;}
 	.loginbox form .form-control {height: 66px;margin-bottom:15px;}
